--- a/registration.html
+++ b/registration.html
@@ -63,7 +63,7 @@
                                 alt="button_profile"></a>
                         <div class="button_cart">
                             <img src="img/button_cart.svg" alt="button_cart">
-                            <div class="cart_number">5</div>
+                            <div class="cart_number"></div>
                         </div>
                     </div>
                 </nav>
