--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <a href="registration.html"><img class="button_profile" src="img/button_profile.svg" alt="button_profile"></a>
                         <div class="button_cart">
                             <img src="img/button_cart.svg" alt="button_cart">
-                            <div class="cart_number">5</div>
+                            <div class="cart_number"></div>
                         </div>
                     </div>
                 </nav>
